# S3-Sidekick

./: .env.example  .gitignore  .main-uncovered.txt  CHANGELOG.md  README.md  cargo_error.txt  eslint.config.js  package-lock.json  package.json  run.rosie.s3-sidekick.desktop  run.rosie.s3-sidekick.metainfo.xml  run.rosie.s3-sidekick.yml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
coverage/: activity-log.ts.html  bookmarks.ts.html  bottom-drawer.ts.html  browser.ts.html  command-palette.ts.html  connection.ts.html  context-menu.ts.html  coverage-final.json  coverage-summary.json  dialogs.ts.html  index.html  info-panel.ts.html  keyboard.ts.html  licenses.ts.html  main.ts.html  preview.ts.html  security.ts.html  settings-model.ts.html  settings.ts.html  state.ts.html  transfers.ts.html  updater.ts.html  utils.ts.html
scripts/: direct-execution.js  dist-tools.js  ensure-draft-release.cjs  flatpak-bundle.js  generate-cargo-licenses.js  git-prune-local-branches.js  gpg-sign.js  normalize-iconsets.js  post-release-assets.js  post-release-assets.test.js  release-session.d.ts  release-session.js  sync-version.js  tauri-windows-build.js  test-all.js  update-metainfo.js  vi.js
src/: activity-log.ts  app-conflicts.ts  app-connection.ts  app-context-menu.ts  app-copy-move.ts  app-downloads.ts  app-events.ts  app-init.ts  app-layout.ts  app-objects.ts  app-selection.ts  app-status.ts  app-upload.ts  bookmarks.ts  bottom-drawer.ts  browser.ts  command-palette.ts  connection.ts  context-menu.ts  dialogs.ts  icons.ts  index.html  info-panel.ts  keyboard.ts  licenses.ts  main.css  main.ts  preview.ts  security.ts  settings-model.ts  settings.ts  setup-wizard.ts  state.ts  toast.ts  transfers.ts  updater.ts  utils.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.dev.conf.json  tree.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon_legacy.icns
src-tauri/src/: bin_test.rs  biometric.rs  files.rs  main.rs  platform.rs  s3.rs  security.rs
src/styles/: activity-log.css  bottom-drawer.css  browser.css  command-palette.css  context-menu.css  controls.css  copy-move.css  dialogs.css  drop-zone.css  effects.css  feedback.css  header.css  info-panel.css  layout.css  licenses.css  modals.css  (+11 more)
(+24 files in other folders)
