[package]
name = "s3-sidekick"
version = "0.9.3"
description = "Desktop client for Digital Ocean Spaces."
authors = ["BurntToasters <code@rosie.run>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
urlencoding = "2"
zeroize = "1"
fs2 = "0.4"
bytes = "1"

tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
core-foundation = "0.9"
security-framework-sys = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Foundation",
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
